feat: implement auth and simple user getting api, update health router, and add error handling middleware
